refactor: the Spark layer and the app code reach their modules, src/ is empty
The last group of the move. No source remains under the 1.x src/ directory.

19 connector files go to spark-base: MilvusOption, MilvusUtil, Properties, the
four readers, ArrowConverter, the two type mappings, MilvusDataSource, the
brute-force search, the five write-path files and SnapshotSparkSchema. All four
Spark lines compile every one of them, which is what makes this spark-base
rather than a single line.

12 app files go to apps-4.0, with the package names following the directories:

  operations.backfill    -> apps.backfill
  tools                  -> apps.tools
  expressions/extensions -> apps.search

apps-4.0 had one directory level too many (src/main/scala/scala/com/...);
flattened in the same change.

MilvusSparkNativeImportWriter is removed. Nothing in the repository referenced
it.

Tests follow their code: 17 suites to spark-4.0, 8 to apps-4.0, 3 integration
cases to integration-4.0, fixture data with them.

The root project becomes dependsOn(spark40, apps40). It carries no source now
and only assembles the fat jar. The artifact name and the publication
coordinates do not change and the Docker build is unaffected; assembly was run
and produces a 72 MB jar carrying DataSourceRegister, MilvusDataSource,
MilvusClient and MilvusSnapshotReader.

Four build changes:

- Modules.legacyDeps hands the 1.x dependency set to all four lines. It only
  gets shorter as code moves down into core.
- The jackson version pin applies to layer 2 only. Spark ships a jackson set
  that agrees with itself; pinning drags databind below what Spark's
  jackson-module-scala needs, which throws at runtime.
- arrow-memory-netty joins arrowDeps, versioned per line. Without it Arrow
  cannot allocate a buffer.
- Modules.nativeTest hands --add-opens and java.library.path to each module and
  pins the forked working directory back to the repository root, which is what
  the 1.x relative-path fixtures need.

Ver